--- a/docs-website/.vale/styles/MyStyle/Branding.yml
+++ b/docs-website/.vale/styles/MyStyle/Branding.yml
@@ -1,12 +1,11 @@
 extends: substitution
 message: "'%s' is not the correct branding. Use '%s' instead."
 level: error
-ignorecase: true
+ignorecase: false
 swap:
   Deepset: deepset
+  DEEPSET: deepset
   Huggingface: Hugging Face
   huggingface: Hugging Face
   HuggingFace: Hugging Face
-  Haystack: Haystack  # Pass-through to suppress errors from wrong variants
-  haystack: Haystack
-  Deepset Platform: deepset AI Platform
+  HAYSTACK: Haystack
