--- a/docs-website/.vale/styles/MyStyle/Numbers.yml
+++ b/docs-website/.vale/styles/MyStyle/Numbers.yml
@@ -1,15 +1,7 @@
 extends: existence
-message: "Spell out numbers zero through nine unless part of time, measurement, or list."
-level: warning
+message: "Consider spelling out numbers zero through nine (exceptions: time, measurements, lists with larger numbers)."
+level: suggestion
 scope: text
 nonword: true
 tokens:
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
-  - 8
-  - 9
+  - '\b[1-9]\b'
