--- a/docs-website/.vale.ini
+++ b/docs-website/.vale.ini
@@ -5,3 +5,6 @@ MinAlertLevel = suggestion
 
 [*.{md,mdx}]
 BasedOnStyles = Vale, Google, MyStyle
+
+# Disable Vale's built-in spell checker (flags technical terms like "embedders")
+Vale.Spelling = NO
