adjust more rules after review

--- a/docs-website/.vale.ini
+++ b/docs-website/.vale.ini
@@ -8,3 +8,14 @@ BasedOnStyles = Vale, Google, MyStyle
 
 # Disable Vale's built-in spell checker (flags technical terms like "embedders")
 Vale.Spelling = NO
+
+# Disable Google.Headings - conflicts with MyStyle.Headings (title case vs sentence case)
+# and doesn't handle PascalCase component names well
+Google.Headings = NO
+
+# Disable Google.Passive - too noisy for technical documentation where passive voice
+# is often appropriate and hard to rephrase
+Google.Passive = NO
+
+# Disable Google.Acronyms - AI/ML acronyms like RAG, LLM are well-known to our audience
+Google.Acronyms = NO
