--- a/docs-website/.vale/styles/MyStyle/AvoidThirdPerson.yml
+++ b/docs-website/.vale/styles/MyStyle/AvoidThirdPerson.yml
@@ -1,14 +1,13 @@
 extends: existence
 message: "Prefer second person ('you') instead of '%s'."
 level: warning
-nonword: true
 scope: text
 tokens:
   - the user
   - the customer
   - the client
-  - he
-  - she
-  - his
-  - her
+  - '\bhe\b'
+  - '\bshe\b'
+  - '\bhis\b'
+  - '\bher\b'
   - their system
