fix: enable vale workflow correctly to review documentation changes (#10211)
* fix: add config path to Vale workflow

* test: add doc to test Vale linting

* Update docs-website-vale.yml

* test single docs folder

* adjust rules

* file for testing vale comments

* adjust rules

* abbreviation rule swap

* simpler test file

* adjust more rules after review

* new testing mdx file

* Delete test-component-page.mdx

--- a/.github/workflows/docs-website-vale.yml
+++ b/.github/workflows/docs-website-vale.yml
@@ -32,9 +32,8 @@ jobs:
       - name: Vale
         uses: errata-ai/vale-action@v2
         with:
-          files: |
-            docs-website/docs
-            docs-website/versioned_docs
+          vale_flags: "--config=docs-website/.vale.ini"
+          files: docs-website/docs
           reporter: github-pr-review
           fail_on_error: false
         env:
