--- a/.github/workflows/promote_unstable_docs.yml
+++ b/.github/workflows/promote_unstable_docs.yml
@@ -54,3 +54,4 @@ jobs:
             This PR promotes the unstable docs for Haystack ${{ steps.version.outputs.version }} to stable.
             It is expected to run at the time of the release.
             You can inspect the docs preview and merge it. There should now be only one unstable version representing the next (main) branch.
+          reviewers: "${{ github.actor }}"
