--- a/.github/workflows/docusaurus_sync.yml
+++ b/.github/workflows/docusaurus_sync.yml
@@ -57,3 +57,4 @@ jobs:
             docs-website/reference/haystack-api
           body: |
             This PR syncs the Haystack API reference on Docusaurus. Just approve and merge it.
+          reviewers: "${{ github.actor }}"
