--- a/.github/workflows/push_release_notes_to_website.yml
+++ b/.github/workflows/push_release_notes_to_website.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   push-release-notes-to-website:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - name: Checkout Haystack home repository
         uses: actions/checkout@v6
