--- a/.github/workflows/docs-website-vale.yml
+++ b/.github/workflows/docs-website-vale.yml
@@ -16,7 +16,7 @@ permissions:
 jobs:
   vale:
     name: Run Vale
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v6
