--- a/.github/workflows/release_notes.yml
+++ b/.github/workflows/release_notes.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   reno:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v6
