--- a/.github/workflows/slow.yml
+++ b/.github/workflows/slow.yml
@@ -40,7 +40,7 @@ jobs:
   # We check for changes in the check-if-changed job instead of using paths/paths-ignore at workflow level.
   # This ensures the "Slow Integration Tests completed" job always runs, which is required by Branch Protection rules.
     name: Check if changed
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     permissions:
       pull-requests: read
     # Specifying outputs is not needed to make the job work, but only to comply with actionlint
@@ -172,7 +172,7 @@ jobs:
   slow-integration-tests-completed:
     # This job always runs and succeeds if all tests succeed or are skipped. It is required by Branch Protection rules.
     name: Slow Integration Tests completed
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     if: ${{ always() }}
     needs: slow-integration-tests
 
