--- a/.github/workflows/docusaurus_sync.yml
+++ b/.github/workflows/docusaurus_sync.yml
@@ -58,3 +58,4 @@ jobs:
           body: |
             This PR syncs the Haystack API reference on Docusaurus. Just approve and merge it.
           reviewers: "${{ github.actor }}"
+          draft: true
