--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,7 @@
 # If you change this name also do it in ci_metrics.yml
 name: end-to-end
 
+# TRIGGER
 on:
   workflow_dispatch: # Activate this workflow manually
   schedule:
