docs: add double backticks in releasenotes

--- a/releasenotes/notes/add-brightdata-websearch-7a12200211at.yaml
+++ b/releasenotes/notes/add-brightdata-websearch-7a12200211at.yaml
@@ -1,4 +1,4 @@
 ---
 enhancements:
   - |
-    Added `BrightDataWebSearch`, a web search component using Bright Data SERP API, supporting Google search with pagination.
+    Added ``BrightDataWebSearch``, a web search component using Bright Data SERP API, supporting Google search with pagination.
