try repairing docs sync

--- a/.github/workflows/docs_search_sync.yml
+++ b/.github/workflows/docs_search_sync.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch: # Activate this workflow manually
   schedule:
     - cron: "0 1 * * *"
+  pull_request:
 
 # Running this workflow multiple times in parallel can cause issues with files uploads and deletions.
 concurrency:
@@ -22,7 +23,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: "22"
+          node-version: "24"
 
       - name: Install Python
         uses: actions/setup-python@v6
