--- a/.github/workflows/promote_unstable_docs.yml
+++ b/.github/workflows/promote_unstable_docs.yml
@@ -3,7 +3,7 @@ name: Release new minor version docs
 on:
   push:
     tags:
-      # Trigger this only for the first patch release of the new minor
+      # Trigger this only for new minor version tags (e.g. v2.99.0)
       - "v[0-9]+.[0-9]+.0"
       # Exclude 1.x tags
       - "!v1.[0-9]+.[0-9]+"
@@ -54,4 +54,8 @@ jobs:
             This PR promotes the unstable docs for Haystack ${{ steps.version.outputs.version }} to stable.
             It is expected to run at the time of the release.
             You can inspect the docs preview and merge it. There should now be only one unstable version representing the next (main) branch.
-          reviewers: "${{ github.actor }}"
+          # This workflow is triggered by a tag pushed by the HaystackBot in release.yml > create-release-tag.
+          # GitHub requires reviewers to be different from the PR author, so setting `github.actor`
+          # would fail (it would request a review from the HaystackBot itself).
+          # So we don't set any reviewers and instead notify the Release Manager
+          # (see .github/utils/prepare_release_notification.sh).
