--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -2,12 +2,18 @@ name: Docker image release
 
 on:
   workflow_dispatch:
+
+  # JUST FOR TESTING, REMOVE BEFORE MERGING
+  pull_request:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'docs/**'
-      - 'docs-website/**'
+    paths:
+      - '.github/workflows/docker_release.yml'
+      - 'docker/**'
+      - 'haystack/**'
+      - 'pyproject.toml'
+      - 'VERSION.txt'
     tags:
       - "v2.[0-9]+.[0-9]+*"
 
@@ -42,15 +48,32 @@ jobs:
         with:
           images: $DOCKER_REPO_NAME
 
+      - name: Detect stable version
+        id: is-stable
+        run: |
+          echo ${{ steps.meta.outputs.version }}
+          VERSION="${{ steps.meta.outputs.version }}"
+          if [[ "$VERSION" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
+            echo "stable=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "stable=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Build base images
-        uses: docker/bake-action@v5
+        uses: docker/bake-action@v6
         env:
           IMAGE_TAG_SUFFIX: ${{ steps.meta.outputs.version }}
           HAYSTACK_VERSION: ${{ steps.meta.outputs.version }}
+          IS_STABLE: ${{ steps.is-stable.outputs.stable }}
         with:
           workdir: docker
           targets: base
-          push: true
+
+          # REVERT BEFORE MERGING
+          push: false
+          load: true
+          set: |
+            base.platforms=linux/amd64
 
       - name: Test base image
         run: |
@@ -64,9 +87,9 @@ jobs:
           VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
           [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
 
-          PLATFORM="linux/arm64"
-          VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
-          [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
+          # PLATFORM="linux/arm64"
+          # VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
+          # [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
 
           # Remove image after test to avoid filling the GitHub runner and prevent its failure
           docker rmi "deepset/haystack:$TAG"
