--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -8,7 +8,7 @@ ARG haystack_version
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    build-essential \
+    # build-essential \
     git
 
 # Shallow clone Haystack repo, we'll install from the local sources
@@ -27,9 +27,5 @@ RUN pip install --upgrade pip && \
 FROM $base_image AS final
 
 COPY --from=build-image /opt/venv /opt/venv
-COPY --from=deepset/xpdf:latest /opt/pdftotext /usr/local/bin
-
-# pdftotext requires fontconfig runtime
-RUN apt-get update && apt-get install -y libfontconfig && rm -rf /var/lib/apt/lists/*
 
 ENV PATH="/opt/venv/bin:$PATH"
