--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -70,6 +70,7 @@ jobs:
           targets: base
 
           # REVERT BEFORE MERGING
+          source: .
           push: false
           load: true
           set: |
