--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/bake-action@v6
         env:
           IMAGE_TAG_SUFFIX: ${{ steps.meta.outputs.version }}
-          HAYSTACK_VERSION: ${{ steps.meta.outputs.version }}
+          HAYSTACK_VERSION: "main"
           IS_STABLE: ${{ steps.is-stable.outputs.stable }}
         with:
           workdir: docker
