--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -51,11 +51,8 @@ jobs:
       - name: Detect stable version
         id: is-stable
         run: |
-          echo ${{ steps.meta.outputs.version }}
-          VERSION="${{ steps.meta.outputs.version }}"
-          if [[ "$VERSION" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
-            echo "is_stable=true" >> "$GITHUB_OUTPUT"
-          fi
+          [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]] && echo "is_stable=true" >> "$GITHUB_OUTPUT"
+
 
       - name: Build base images
         uses: docker/bake-action@v6
@@ -70,26 +67,23 @@ jobs:
           # REVERT BEFORE MERGING
           source: .
           push: false
-          load: true
-
-      - name: Test base image
-        run: |
-          EXPECTED_VERSION=$(cat VERSION.txt)
-          if [[ $EXPECTED_VERSION == *"-"* ]]; then
-            EXPECTED_VERSION=$(cut -d '-' -f 1 < VERSION.txt)$(cut -d '-' -f 2 < VERSION.txt)
-          fi
-          TAG="base-${{ steps.meta.outputs.version }}"
-
-          # PLATFORM="linux/amd64"
-          # VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
-          # [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
-
-          PLATFORM="linux/arm64"
-          VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
-          [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
-
-          echo "**** VERSION ****: $VERSION"
 
 
-          # Remove image after test to avoid filling the GitHub runner and prevent its failure
-          docker rmi "deepset/haystack:$TAG"
+      # - name: Test base image
+      #   run: |
+      #     EXPECTED_VERSION=$(cat VERSION.txt)
+      #     if [[ $EXPECTED_VERSION == *"-"* ]]; then
+      #       EXPECTED_VERSION=$(cut -d '-' -f 1 < VERSION.txt)$(cut -d '-' -f 2 < VERSION.txt)
+      #     fi
+      #     TAG="base-${{ steps.meta.outputs.version }}"
+
+      #     PLATFORM="linux/amd64"
+      #     VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
+      #     [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
+
+      #     PLATFORM="linux/arm64"
+      #     VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
+      #     [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
+
+      #     # Remove image after test to avoid filling the GitHub runner and prevent its failure
+      #     docker rmi "deepset/haystack:$TAG"
