--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -1,8 +1,8 @@
 name: Docker image release
 
 on:
-  pull_request:
   workflow_dispatch:
+  pull_request:
   push:
     branches:
       - main
@@ -50,8 +50,12 @@ jobs:
         id: is-stable
         run: |
           if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
-            echo "is_stable=true" >> "$GITHUB_OUTPUT"
+            echo "IS_STABLE=true" >> "$GITHUB_ENV"
           fi
+
+      - name: Print stable version
+        run: |
+          echo "IS_STABLE=$IS_STABLE"
 
       - name: Build base images
         uses: docker/bake-action@v6
