--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -49,9 +49,9 @@ jobs:
       - name: Detect stable version
         id: is-stable
         run: |
-          if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
-            echo "IS_STABLE=true" >> "$GITHUB_ENV"
-          fi
+          # if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
+          echo "IS_STABLE=true" >> "$GITHUB_ENV"
+          # fi
 
       - name: Print stable version
         run: |
