--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -2,7 +2,6 @@ name: Docker image release
 
 on:
   workflow_dispatch:
-  pull_request:
   push:
     branches:
       - main
@@ -47,16 +46,10 @@ jobs:
           images: $DOCKER_REPO_NAME
 
       - name: Detect stable version
-        id: is-stable
         run: |
-          # if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
-          echo "IS_STABLE=true" >> "$GITHUB_ENV"
-          # fi
-
-      - name: Print stable version
-        run: |
-          echo "IS_STABLE=$IS_STABLE"
-
+          if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
+            echo "IS_STABLE=true" >> "$GITHUB_ENV"
+          fi
       - name: Build base images
         uses: docker/bake-action@v6
         env:
@@ -65,25 +58,24 @@ jobs:
         with:
           workdir: docker
           targets: base
-          source: .
-          push: false
+          push: true
 
 
-      # - name: Test base image
-      #   run: |
-      #     EXPECTED_VERSION=$(cat VERSION.txt)
-      #     if [[ $EXPECTED_VERSION == *"-"* ]]; then
-      #       EXPECTED_VERSION=$(cut -d '-' -f 1 < VERSION.txt)$(cut -d '-' -f 2 < VERSION.txt)
-      #     fi
-      #     TAG="base-${{ steps.meta.outputs.version }}"
+      - name: Test base image
+        run: |
+          EXPECTED_VERSION=$(cat VERSION.txt)
+          if [[ $EXPECTED_VERSION == *"-"* ]]; then
+            EXPECTED_VERSION=$(cut -d '-' -f 1 < VERSION.txt)$(cut -d '-' -f 2 < VERSION.txt)
+          fi
+          TAG="base-${{ steps.meta.outputs.version }}"
 
-      #     PLATFORM="linux/amd64"
-      #     VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
-      #     [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
+          PLATFORM="linux/amd64"
+          VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
+          [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
 
-      #     PLATFORM="linux/arm64"
-      #     VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
-      #     [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
+          PLATFORM="linux/arm64"
+          VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
+          [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
 
-      #     # Remove image after test to avoid filling the GitHub runner and prevent its failure
-      #     docker rmi "deepset/haystack:$TAG"
+          # Remove image after test to avoid filling the GitHub runner and prevent its failure
+          docker rmi "deepset/haystack:$TAG"
