--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,8 @@ docs = "./.github/utils/pydoc-markdown.sh"
 
 [tool.hatch.envs.test]
 
+# TRIGGER
+
 # we override dependencies from the default environment
 dependencies = [
   "numpy>=2", # Haystack is compatible both with numpy 1.x and 2.x, but we test with 2.x
