try triggering again

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ dependencies = [
   "docstring-parser",       # ComponentTool
   "filetype",               # MIME type guessing for ImageContent
   "haystack-experimental",
+  "transformers"
 ]
 
 [tool.hatch.envs.default]
