ci: refactor/optimize Docker builds (#10387)
* ci: docker refactor - WIP

* retry

* fix

* improvements

* retry

* try amd64 only

* retry

* try arm

* try uv

* clean

* fix

* revert test changes

* use venv and test

* fix

* try simplification

* try setting stable

* better bake

* again

* clean up again

* fix

* try caching and test

* try separate caches

* trigger cache invalidation

* try triggering again

* Revert "try triggering again"

This reverts commit bbc42a6e2a2ae8975209f1beb80270e07066006d.

* Revert "trigger cache invalidation"

This reverts commit b37310b9a14cd3a5f6ad2dc4748fe49e95a8d4a3.

* Revert "try separate caches"

This reverts commit 9ef381c9aaa452f5d90b6e8c10685dd179372bfc.

* Revert "try caching and test"

This reverts commit e50d57611a0428f07c7e166be86e07f4c263b5d1.

--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -5,9 +5,12 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'docs/**'
-      - 'docs-website/**'
+    paths:
+      - '.github/workflows/docker_release.yml'
+      - 'docker/**'
+      - 'haystack/**'
+      - 'pyproject.toml'
+      - 'VERSION.txt'
     tags:
       - "v2.[0-9]+.[0-9]+*"
 
@@ -42,8 +45,13 @@ jobs:
         with:
           images: $DOCKER_REPO_NAME
 
+      - name: Detect stable version
+        run: |
+          if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
+            echo "IS_STABLE=true" >> "$GITHUB_ENV"
+          fi
       - name: Build base images
-        uses: docker/bake-action@v5
+        uses: docker/bake-action@v6
         env:
           IMAGE_TAG_SUFFIX: ${{ steps.meta.outputs.version }}
           HAYSTACK_VERSION: ${{ steps.meta.outputs.version }}
