--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -56,6 +56,7 @@ jobs:
           IMAGE_TAG_SUFFIX: ${{ steps.meta.outputs.version }}
           HAYSTACK_VERSION: ${{ steps.meta.outputs.version }}
         with:
+          source: .
           workdir: docker
           targets: base
           push: true
