Add some missing api docs

--- a/pydoc/converters_api.yml
+++ b/pydoc/converters_api.yml
@@ -18,6 +18,7 @@ loaders:
         "pypdf",
         "tika",
         "txt",
+        "utils",
         "xlsx",
       ]
     ignore_when_discovered: ["__init__"]
