--- a/pydoc/preprocessors_api.yml
+++ b/pydoc/preprocessors_api.yml
@@ -7,6 +7,7 @@ loaders:
       "document_cleaner",
       "document_preprocessor",
       "document_splitter",
+      "embedding_based_document_splitter",
       "hierarchical_document_splitter",
       "recursive_splitter",
       "text_cleaner"]
