--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -2,6 +2,9 @@ name: Docker image release
 
 on:
   workflow_dispatch:
+
+  # JUST FOR TESTING, REMOVE BEFORE MERGING
+  pull_request:
   push:
     branches:
       - main
@@ -47,7 +50,8 @@ jobs:
 
       - name: Detect stable version
         run: |
-          if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
+          version="v2.23.0"
+          if [[ "$version" =~ ^v2\.[0-9]+\.[0-9]+$ ]]; then
             echo "IS_STABLE=true" >> "$GITHUB_ENV"
           fi
       - name: Build base images
@@ -59,7 +63,11 @@ jobs:
           source: .
           workdir: docker
           targets: base
-          push: true
+          # REVERT BEFORE MERGING
+          push: false
+          load: true
+          set: |
+            base.platforms=linux/amd64
 
       - name: Test base image
         run: |
@@ -73,9 +81,9 @@ jobs:
           VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
           [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
 
-          PLATFORM="linux/arm64"
-          VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
-          [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
+          # PLATFORM="linux/arm64"
+          # VERSION=$(docker run --platform "$PLATFORM" --rm "deepset/haystack:$TAG" python -c"from haystack.version import __version__; print(__version__)")
+          # [[ "$VERSION" = "$EXPECTED_VERSION" ]] || echo "::error 'Haystack version in deepset/haystack:$TAG image for $PLATFORM is different from expected'"
 
           # Remove image after test to avoid filling the GitHub runner and prevent its failure
           docker rmi "deepset/haystack:$TAG"
