--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -47,8 +47,11 @@ jobs:
 
       - name: Detect stable version
         run: |
-          if [[ "${{ steps.meta.outputs.version }}" =~ ^2\.[0-9]+\.[0-9]+$ ]]; then
+          if [[ "${{ steps.meta.outputs.version }}" =~ ^v2\.[0-9]+\.[0-9]+$ ]]; then
             echo "IS_STABLE=true" >> "$GITHUB_ENV"
+            echo "Stable version detected"
+          else
+            echo "Not a stable version"
           fi
       - name: Build base images
         uses: docker/bake-action@v6
