--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,7 +151,8 @@ dependencies = [
   "pip",                     # mypy needs pip to install missing stub packages
   "pylint",
   "ipython",
-  "colorama==0.4.6",         # Pipeline checkpoints test - ToDo: rewrite the test without this lib
+  "colorama==0.4.6",         # Pipeline checkpoints test
+  "anyio",                   # needed for asynchronous Path testing
 ]
 
 [tool.hatch.envs.test.scripts]
